# ehl-paris-2026-medical-retrieval

./: .gitignore  CV_RESULTS.md  FINDINGS.md  README.md  mind_register.py  mind_retrieval.py  pyproject.toml  rerank_baseline.py  run_brainiac.sh  run_ft.sh  run_mind.sh  run_mind_reg.sh  run_rerank.sh  run_skullstrip.sh  skills-lock.json  skullstrip.py  slice_clip_baseline.py  xattn_rerank.py
.claude/: settings.json
04/dc88015385/: metadata.json
04/dc88015385/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0a/9d46030d7d/: metadata.json
0a/9d46030d7d/0/: content_hash.txt  metadata.json  prompt.txt
17/62aed59a4f/: metadata.json
17/62aed59a4f/0/: metadata.json  prompt.txt
3d/4d6bad790f/: metadata.json
3d/4d6bad790f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5c/f1f9ffba8f/: metadata.json
5c/f1f9ffba8f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
69/2792fdd8b9/: metadata.json
69/2792fdd8b9/0/: full.jsonl  metadata.json  prompt.txt
80/4dfb36b1d2/: metadata.json
80/4dfb36b1d2/0/: metadata.json  prompt.txt
a0/7cd3657d15/: metadata.json
a0/7cd3657d15/0/: metadata.json  prompt.txt
b7/365d27891a/: metadata.json
b7/365d27891a/0/: metadata.json  prompt.txt
ca/2dc2e39d36/: metadata.json
ca/2dc2e39d36/0/: metadata.json  prompt.txt
ed/4617ce6a24/: metadata.json
ed/4617ce6a24/0/: metadata.json  prompt.txt
ed/b7ec4e63a1/: metadata.json
ed/b7ec4e63a1/0/: metadata.json  prompt.txt
eval/: cv_eval.py  cv_plot.py
experiments/: brainiac_encode.py  brainiac_finetune.py  rerank_ds2aug.py  slice_clip_ds2aug.py
fc/d44f453200/: metadata.json
fc/d44f453200/0/: metadata.json  (+1 more)
scripts/: run_brainiac.sh  run_cv_eval.sh  run_ds2aug.sh  run_ft.sh  run_mind.sh  run_mind_reg.sh  run_rerank.sh  run_skullstrip.sh
